error2.log
file:///C:/Users/sukir/OneDrive%20-%20sece.ac.in/Documents/CSBS%202ND%20YEAR/SEMESTER%204/Mern_Internship/CRM/server/Routes/crmRoutes.js:7
    getFaculty, createFaculty, deleteFaculty, updateFaculty,
    ^^^^^^^^^^
SyntaxError: The requested module '../Controller/crmController.js' does not provide an export named 'getFaculty'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
